# EMTools

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: config.sh  install_libSeqAn.sh  install_libUnitTest++.sh  install_libboost.sh
src/: CMakeLists.txt  unittests.cpp
src/Applications/: ApplicationInterface.cpp  ApplicationInterface.hpp  ClassReadDataCreatorApplication.cpp  ClassReadDataCreatorApplication.hpp  ClassSequenceDataCreatorApplication.cpp  ClassSequenceDataCreatorApplication.hpp  CorrelationMatrixCreatorApplication.cpp  CorrelationMatrixCreatorApplication.hpp  EMConsensusSequenceApplication.cpp  EMConsensusSequenceApplication.hpp  EMJointApplication.cpp  EMJointApplication.hpp  EMReadApplication.cpp  EMReadApplication.hpp  EMSequenceApplication.cpp  EMSequenceApplication.hpp  MatrixBinToTxtApplication.cpp  MatrixBinToTxtApplication.hpp  ProbToModelApplication.cpp  ProbToModelApplication.hpp  ReadModelExtenderApplication.cpp  ReadModelExtenderApplication.hpp  SequenceMatrixCreatorApplication.cpp  SequenceMatrixCreatorApplication.hpp  SequenceModelExtenderApplication.cpp  SequenceModelExtenderApplication.hpp  WhichNullRowsApplication.cpp  WhichNullRowsApplication.hpp
src/Clustering/: ConsensusSequenceLayer.cpp  ConsensusSequenceLayer.hpp  ConsensusSequenceModelComputer.cpp  ConsensusSequenceModelComputer.hpp  Data2DLayer.cpp  Data2DLayer.hpp  Data3DLayer.cpp  Data3DLayer.hpp  DataLayer.cpp  DataLayer.hpp  EMBase.cpp  EMBase.hpp  EMConsensusSequence.cpp  EMConsensusSequence.hpp  EMJoint.cpp  EMJoint.hpp  EMRead.cpp  EMRead.hpp  EMSequence.cpp  EMSequence.hpp  ModelComputer.cpp  ModelComputer.hpp  ReadLayer.cpp  ReadLayer.hpp  ReadModelComputer.cpp  ReadModelComputer.hpp  SequenceLayer.cpp  SequenceLayer.hpp  SequenceModelComputer.cpp  SequenceModelComputer.hpp
src/GenomicTools/: ClassReadDataCreator.cpp  ClassReadDataCreator.hpp  ClassSequenceDataCreator.cpp  ClassSequenceDataCreator.hpp  CorrelationMatrixCreator.cpp  CorrelationMatrixCreator.hpp  GenomeRegion.cpp  GenomeRegion.hpp  MatrixCreator.cpp  MatrixCreator.hpp  ReadMatrixCreator.cpp  ReadMatrixCreator.hpp  SequenceMatrixCreator.cpp  SequenceMatrixCreator.hpp  typedef.hpp
src/Parallel/: ThreadPool.cpp  ThreadPool.hpp
src/Random/: BetaDistribution.hpp  Random.cpp  Random.hpp  RandomNumberGenerator.hpp
src/Statistics/: KmersStatistics.cpp  KmersStatistics.hpp  Statistics.cpp  Statistics.hpp
src/Unittests/: unittests_genomictools.cpp  unittests_matrix.cpp
src/Unittests/data/: matrix4d_int9.mat
src/Utility/: dna_utility.cpp  dna_utility.hpp  matrix_utility.cpp  matrix_utility.hpp  sorting_utility.hpp
